# Rust-Implementation-QuantNet-cpp-for-Financial-Engineering

./: .gitignore  README.md
Level1/: README.md
Level1/Sect1.3/Exercise1/: Cargo.toml
Level1/Sect1.3/Exercise1/src/: main.rs
Level1/Sect1.3/Exercise2/: Cargo.toml
Level1/Sect1.3/Exercise2/src/: main.rs
Level1/Sect1.3/Exercise3/: Cargo.toml
Level1/Sect1.3/Exercise3/src/: main.rs
Level1/Sect1.3/Exercise4/: Cargo.toml
Level1/Sect1.3/Exercise4/src/: main.rs
Level1/Sect1.3/Exercise5/: Cargo.toml
Level1/Sect1.3/Exercise5/src/: main.rs
Level1/Sect1.3/Exercise6/: Cargo.toml
Level1/Sect1.3/Exercise6/src/: main.rs
Level1/Sect1.3/Exercise7/: Cargo.toml
Level1/Sect1.3/Exercise7/src/: main.rs
Level1/Sect1.3/Exercise8/: Cargo.toml
Level1/Sect1.3/Exercise8/src/: main.rs
Level1/Sect1.3/Exercise9/: Cargo.toml
Level1/Sect1.3/Exercise9/src/: main.rs
Level1/Sect1.4/Exercise1/: Cargo.toml
Level1/Sect1.4/Exercise1/src/: main.rs
Level1/Sect1.4/Exercise2/: Cargo.toml
Level1/Sect1.4/Exercise2/src/: main.rs
Level1/Sect1.4/Exercise3/: Cargo.toml
Level1/Sect1.4/Exercise3/src/: main.rs
Level1/Sect1.4/Exercise4/: Cargo.toml
Level1/Sect1.4/Exercise4/src/: main.rs
Level1/Sect1.4/Exercise5/: Cargo.toml
Level1/Sect1.4/Exercise5/src/: main.rs
Level1/Sect1.4/Exercise6/: Cargo.toml
Level1/Sect1.4/Exercise6/src/: main.rs
Level1/Sect1.4/Exercise7/: Cargo.toml
Level1/Sect1.4/Exercise7/src/: main.rs
Level1/Sect1.5/Exercise1/: Cargo.toml
Level1/Sect1.5/Exercise1/src/: main.rs
Level1/Sect1.5/Exercise2/: Cargo.toml
Level1/Sect1.5/Exercise2/src/: main.rs
Level1/Sect1.5/Exercise3/: Cargo.toml
Level1/Sect1.5/Exercise3/src/: main.rs  print.rs
Level1/Sect1.5/Exercise4/: Cargo.toml
Level1/Sect1.5/Exercise4/src/: main.rs
Level2/: README.md
Level2/Sect1.6/Exercise1/: Cargo.toml
Level2/Sect1.6/Exercise1/src/: defs.rs  main.rs
Level2/Sect1.6/Exercise2/: Cargo.toml
Level2/Sect1.6/Exercise2/src/: defs.rs  main.rs
Level2/Sect1.7/Exercise1/: Cargo.toml
Level2/Sect1.7/Exercise1/src/: main.rs
Level2/Sect1.7/Exercise2/: Cargo.toml
Level2/Sect1.7/Exercise2/src/: main.rs
Level2/Sect1.7/Exercise3/: Cargo.toml
Level2/Sect1.7/Exercise3/src/: main.rs
Level2/Sect1.7/Exercise4/: Cargo.toml
Level2/Sect1.7/Exercise4/src/: main.rs
Level2/Sect1.8/Exercise1/: Cargo.toml
Level2/Sect1.8/Exercise1/src/: main.rs
Level2/Sect1.9/Exercise1/: Cargo.toml
Level2/Sect1.9/Exercise1/src/: main.rs
Level2/Sect1.9/Exercise2/: Cargo.toml  output.txt
Level2/Sect1.9/Exercise2/src/: main.rs
Level3/: README.md
Level3/Sect2.2/Exercise1/: Cargo.toml
Level3/Sect2.2/Exercise1/src/: main.rs  point.rs
Level3/Sect2.2/Exercise2/: Cargo.toml
Level3/Sect2.2/Exercise2/src/: main.rs  point.rs
Level3/Sect2.3/Exercise1/: Cargo.toml
Level3/Sect2.3/Exercise1/src/: main.rs  point.rs
Level3/Sect2.3/Exercise3/: Cargo.toml
Level3/Sect2.3/Exercise3/src/: main.rs  point.rs
Level3/Sect2.3/Exercise4/: Cargo.toml
Level3/Sect2.3/Exercise4/src/: main.rs  point.rs
Level3/Sect2.3/Exercise5/: Cargo.toml
Level3/Sect2.3/Exercise5/src/: line.rs  main.rs  point.rs
Level3/Sect2.3/Exercise6/: Cargo.toml
Level3/Sect2.3/Exercise6/src/: circle.rs  main.rs  point.rs
Level3/Sect2.3/Exercise7/: Cargo.toml
Level3/Sect2.3/Exercise7/src/: main.rs  point.rs
Level4/Sect2.4/Exercise1/: Cargo.toml
Level4/Sect2.4/Exercise1/src/: circle.rs  line.rs  main.rs  point.rs
Level4/Sect2.4/Exercise2/: Cargo.toml
Level4/Sect2.4/Exercise2/src/: circle.rs  line.rs  main.rs  point.rs
Level4/Sect2.4/Exercise3/: Cargo.toml
Level4/Sect2.4/Exercise3/src/: circle.rs  line.rs  main.rs  point.rs
Level4/Sect2.4/Exercise4/: Cargo.toml
Level4/Sect2.4/Exercise4/src/: circle.rs  line.rs  main.rs  point.rs
Level4/Sect2.5/Exercise1/: Cargo.toml
Level4/Sect2.5/Exercise1/src/: circle.rs  line.rs  main.rs  point.rs
Level4/Sect2.5/Exercise2/: Cargo.toml
Level4/Sect2.5/Exercise2/src/: circle.rs  line.rs  main.rs  point.rs
Level4/Sect2.5/Exercise3/: Cargo.toml
Level4/Sect2.5/Exercise3/src/: array.rs  main.rs  point.rs
Level4/Sect2.6/Exercise1/: Cargo.toml
Level4/Sect2.6/Exercise1/src/: main.rs
Level4/Sect2.6/Exercise1/src/paul_lopez/: mod.rs
Level4/Sect2.6/Exercise1/src/paul_lopez/cad/: circle.rs  line.rs  mod.rs  point.rs  shape.rs
Level4/Sect2.6/Exercise1/src/paul_lopez/containers/: array.rs  mod.rs
